K finally fixed the issue
This will now download ALL files in the download area.. rather than downloading them at launch.